# scouty

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/scouty/: Cargo.toml
crates/scouty-tui/: Cargo.toml
crates/scouty-tui/spec/: config.md  copy-and-export.md  detail-panel.md  help.md  highlight.md  log-table.md  navigation.md  overview.md  panel-system.md  perf.md  search-and-filter.md  stats.md  status-bar.md  theme.md  ui-architecture.md
crates/scouty-tui/src/: app.rs  density.rs  follow.rs  follow_tests.rs  keybinding.rs  keybinding_tests.rs  main.rs  panel.rs  panel_tests.rs  pipe.rs  pipe_tests.rs  text_input.rs  text_input_tests.rs  theme.rs  theme_tests.rs  ui.rs  ui_legacy.rs
crates/scouty-tui/src/config/: color.rs  color_tests.rs  config_tests.rs  filter_preset.rs  filter_preset_tests.rs  mod.rs  theme.rs  theme_tests.rs
crates/scouty-tui/src/ui/: framework.rs  framework_tests.rs  mod.rs  mod_tests.rs
crates/scouty-tui/src/ui/widgets/: category_panel_keys.rs  mod.rs  (+21 more)
crates/scouty/benches/: parser_bench.rs  pipeline_bench.rs
crates/scouty/examples/: profile_load.rs
crates/scouty/spec/: categorization.md  filter.md  follow-mode.md  loaders.md  log-record.md  log-store-view.md  log-store.md  parsers.md  region.md
crates/scouty/src/: category.rs  category_tests.rs  integration_tests.rs  lib.rs  processor.rs  processor_tests.rs  record.rs  record_tests.rs  session.rs  session_tests.rs  store.rs  store_tests.rs  traits.rs  view.rs  view_tests.rs
crates/scouty/src/filter/: engine.rs  engine_tests.rs  eval.rs  eval_tests.rs  expr.rs  expr_filter.rs  expr_tests.rs  mod.rs
crates/scouty/src/loader/: archive.rs  archive_tests.rs  file.rs  file_tests.rs  mod.rs  otlp.rs  otlp_tests.rs  ssh.rs  ssh_tests.rs  stdin.rs  stdin_tests.rs  syslog.rs  syslog_tests.rs
crates/scouty/src/parser/: config.rs  config_tests.rs  extended_syslog_parser.rs  extended_syslog_parser_tests.rs  factory.rs  factory_tests.rs  group.rs  group_tests.rs  json_parser.rs  json_parser_tests.rs  mod.rs  multiline.rs  multiline_tests.rs  regex_parser.rs  regex_parser_tests.rs  sairedis_parser.rs  sairedis_parser_tests.rs  swss_parser.rs  swss_parser_tests.rs  syslog_parser.rs  syslog_parser_tests.rs  unified_syslog_parser.rs  unified_syslog_parser_tests.rs
crates/scouty/src/region/: config.rs  mod.rs  processor.rs  processor_tests.rs  region_tests.rs  store.rs  store_tests.rs
crates/scouty/tests/: phase1.rs
(+45 files in other folders)
