[workspace]
members = ["crates/scouty", "crates/scouty-tui"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
repository = "https://github.com/r12f/scouty"
description = "A log viewing and analysis tool"

[workspace.dependencies]
scouty = { path = "crates/scouty", version = "0.1.3" }
