[package]
name = "scouty-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for scouty log viewer"

[dependencies]
scouty = { path = "../scouty", version = "0.1.2" }
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
regex = "1"
base64 = "0.22"
serde_json = "1"
serde_yaml = "0.9"
libc = "0.2"
