[package]
name = "scouty"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Log parsing, filtering, and analysis library"

[dependencies]
memchr = "2"
memmap2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
flate2 = "1"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
sevenz-rust = "0.6"
rayon = "1"
thiserror = "2"
zip = "2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false
